Fix BT I/O MPI binding + Add support for Spark data directory